--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,19 @@
 <resources>
     <string name="app_name">Get NOVISSI</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="processing_title">Novissi In Process</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="my_accessibility_service_description">
         Enable permissions from use USSD
     </string>
+    <string name="init">Initializing</string>
+    <string name="restarting">Restarting</string>
 
 </resources>
