--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     </string>
     <string name="init">Initializing</string>
     <string name="restarting">Restarting</string>
+    <string name="title_activity_novissi">Novissi</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
 
 </resources>
