--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="title_activity_novissi">Novissi</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="stopping">Stopping</string>
 
 </resources>
