--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,9 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="processing_title">Novissi In Process</string>
+    <string name="processing_title">Novissi</string>
     <string name="novissis_title">Novissis</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="my_accessibility_service_description">
         Enable permissions from use USSD
     </string>
@@ -18,7 +15,6 @@
     <string name="restarting">Restarting</string>
     <string name="title_activity_novissi">Novissi</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
     <string name="stopping">Stopping</string>
 
 </resources>
